--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇹🇭 泰国-1.83MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.88MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-286.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-655.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.37MB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-795.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-4.18MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-316.4KB/s(Youtube:不良林), server: 120.233.29.189, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.44MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.14MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-326.8KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-451.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-455.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-456.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林), server: 45.144.176.135, port: 3005, type: ss, cipher: aes-256-cfb, password: 987.085wrcgrwqs36.985}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
