--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇯🇵 日本-3.31MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇦 加拿大-1.29MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.30MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-250.1KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
-  - {name: 🇨🇳 中国-600.9KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-456.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-847.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.88MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇦🇺 澳大利亚-771.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇨🇦 加拿大-997.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-414.4KB/s(Youtube:不良林), server: 36.134.154.119, port: 65072, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-771.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-771.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-771.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-771.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-771.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-771.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-771.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
