--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-162.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-364.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-451.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-1.41MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-327.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-418.5KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-736.1KB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
+  - {name: 🇺🇸 美国-150.4KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-374.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-455.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-847.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.88MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.48MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-658.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 塞浦路斯-302.4KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇬🇧 英国-1.05MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-162.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-736.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-658.9KB/s(Youtube:不良林)
+      - 塞浦路斯-302.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-162.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-736.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-658.9KB/s(Youtube:不良林)
+      - 塞浦路斯-302.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-162.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-736.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-658.9KB/s(Youtube:不良林)
+      - 塞浦路斯-302.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-658.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-162.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-736.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-658.9KB/s(Youtube:不良林)
+      - 塞浦路斯-302.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-162.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-736.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-658.9KB/s(Youtube:不良林)
+      - 塞浦路斯-302.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-162.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-736.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-658.9KB/s(Youtube:不良林)
+      - 塞浦路斯-302.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-162.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-736.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-150.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-658.9KB/s(Youtube:不良林)
+      - 塞浦路斯-302.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
