--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-213.8KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 (已存活9天)香港-1.72MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-239.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-1.71MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-730.7KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-334.1KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-947.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇦🇺 澳大利亚-745.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-998.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.94MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-581.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇦 加拿大-878.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-695.9KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-418.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-213.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-947.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-998.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-581.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-213.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-947.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-998.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-581.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-213.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-947.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-998.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-581.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-1.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-213.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-947.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-998.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-581.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-213.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-947.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-998.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-581.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-213.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-947.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-998.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-581.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-213.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-947.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-998.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-581.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
